--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">how to make own website</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-background mbr-after-navbar" id="features3-k" data-rv-view="242" style="background-image: url(assets/images/mbr-1-2000x1333-2.jpg);">
+<section class="engine"><a href="https://mobirise.ws/l">html web creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-background mbr-after-navbar" id="features3-k" data-rv-view="242" style="background-image: url(assets/images/mbr-1-2000x1333-2.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(242, 130, 129);">
     </div>
@@ -67,7 +67,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 120px; padding-bottom: 80px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/watermarked-mg-8549-small-600x9000.jpg" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/watermarked-mg-8549-small-600x9001.jpg" class="card-img-top"></div>
                   <div class="card-block">
                     <h4 class="card-title">Relaxing massage &amp;/or cuddles</h4>
                     <h5 class="card-subtitle">One hour minimum &nbsp;</h5>
