--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web development software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.ws/n">mobile website maker app</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-a" data-rv-view="251" style="background-color: rgb(225, 141, 140); padding-top: 120px; padding-bottom: 30px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-a" data-rv-view="251" style="background-color: rgb(40, 50, 78); padding-top: 120px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
@@ -123,7 +123,7 @@ Phone: +1 250 508 4428<br></p>
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="PhEKIegFk8xIUZS47tRlmi9PvUafD/rG8ehltCtxiJn8SGfhfjtZeEeiaE2Krekz7f24Xi+ELhdWokqNgu75NhpzIwgcxDL0iVkHmadI93iAxBuvsMmLHNaH8kTD99R7" data-form-email="true">
+                        <input type="hidden" value="KRmyspUCTpFN7Pap9qJoWMaTWjZBjeNbu/NsfjTkhuIQBRXANq9mpv1fdsRYGDbohttxSQ/7HYCSQt2Tate/vmkoP4QSD5w5sDecZ1jhpl8KMSqRp2XSE77JbxPgkQCI" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
