--- a/page1.html
+++ b/page1.html
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="navbar-logo"><img src="assets/images/99cabc-7ec74df357dc49329a54cdc6bd4125cemv2-d-3379-2760-s-4-22j-167x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="index.html">&nbsp; Fun Prostate Massage<br>Based in Victoria BC<br>&nbsp; +12505084428</a>
+                        <a class="navbar-caption" href="index.html">&nbsp; Preventing ED<br>Based in Victoria BC<br>&nbsp; +12505084428</a>
                     </div>
 
                 </div>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html web creator</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-background mbr-after-navbar" id="features3-k" data-rv-view="242" style="background-image: url(assets/images/mbr-1-2000x1333-2.jpg);">
+<section class="engine"><a href="https://mobirise.ws/d">best free web software</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-background mbr-after-navbar" id="features3-k" data-rv-view="242" style="background-image: url(assets/images/mbr-1-2000x1333-2.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(242, 130, 129);">
     </div>
@@ -67,7 +67,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 120px; padding-bottom: 80px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/watermarked-mg-8549-small-600x9001.jpg" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/watermarked-mg-8549-small-600x9002.jpg" class="card-img-top"></div>
                   <div class="card-block">
                     <h4 class="card-title">Relaxing massage &amp;/or cuddles</h4>
                     <h5 class="card-subtitle">One hour minimum &nbsp;</h5>
