--- a/page3.html
+++ b/page3.html
@@ -36,7 +36,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="navbar-logo"><img src="assets/images/99cabc-7ec74df357dc49329a54cdc6bd4125cemv2-d-3379-2760-s-4-22j-167x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="index.html">&nbsp; Fun Prostate Massage<br>Based in Victoria BC<br>&nbsp; +12505084428</a>
+                        <a class="navbar-caption" href="index.html">&nbsp; Preventing ED<br>Based in Victoria BC<br>&nbsp; +12505084428</a>
                     </div>
 
                 </div>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web maker software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-w" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-w" data-rv-view="264" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
