--- a/page2.html
+++ b/page2.html
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="index.html" class="navbar-logo"><img src="assets/images/99cabc-7ec74df357dc49329a54cdc6bd4125cemv2-d-3379-2760-s-4-22j-167x128.jpg" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="index.html">&nbsp; Fun Prostate Massage<br>Based in Victoria BC<br>&nbsp; +12505084428</a>
+                        <a class="navbar-caption" href="index.html">&nbsp; Preventing ED<br>Based in Victoria BC<br>&nbsp; +12505084428</a>
                     </div>
 
                 </div>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">mobile website maker app</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.ws/j">how to design own website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@ Phone: +1 250 508 4428<br></p>
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="KRmyspUCTpFN7Pap9qJoWMaTWjZBjeNbu/NsfjTkhuIQBRXANq9mpv1fdsRYGDbohttxSQ/7HYCSQt2Tate/vmkoP4QSD5w5sDecZ1jhpl8KMSqRp2XSE77JbxPgkQCI" data-form-email="true">
+                        <input type="hidden" value="zSVgPynN9/MOk7P7BBOJxba2DRnyZWjDlL5Ft8lIuq5yrfNNsHZ0PpJXClAJdeCkyH2XOqp0nVQp9VMbmu79Sox7hKxC3cpkoQ/4RWTqEBVnJMx3EW4NNknZKLwYexhe" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
