create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">Sessions</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Articles</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">Contact me</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://www.blissonbliss.com/book-online" target="_blank">Book a session</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="sessions">Sessions</a></li><li class="nav-item"><a class="nav-link link" href="ED-articles">Articles</a></li><li class="nav-item"><a class="nav-link link" href="contact">Contact me</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://www.blissonbliss.com/book-online" target="_blank">Book a session</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
