--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="page1.html">Sessions</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Articles</a></li><li class="nav-item"><a class="nav-link link" href="page2.html">Contact me</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://www.blissonbliss.com/book-online" target="_blank">Book a session</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="sessions">Sessions</a></li><li class="nav-item"><a class="nav-link link" href="ED-articles">Articles</a></li><li class="nav-item"><a class="nav-link link" href="contact">Contact me</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="https://www.blissonbliss.com/book-online" target="_blank">Book a session</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web design software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@ Phone: +1 250 508 4428<br></p>
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="dUob8T/0wI5pYLhmzXE2mCiaDMnB2Kw36YRmucvuaAN7xGHJnVy4pGeM7VvgQXi0g01Kz0N3ZA/KN2aKZ+iqFTqYGAMJ2F4ERLhFahc+oAD+qS2gnDGKGhRaPp3ByZvu" data-form-email="true">
+                        <input type="hidden" value="xiBYd5IkcZShbIxZrYQTW7kdwguqstEUG0yPGTCPSdr5Uu2tQbADuAdtHIV3jtUjqXZLMZMNkS8SkZGfMv1FEq8+FSF2nKgnXwTIUbsh4UQFZtY8lHcahVqcWDPvy4s6" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
