create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader6 mbr-parallax-background mbr-after-navbar" id="extHeader6-8" data-rv-view="220" style="background-image: url(assets/images/mbr-1-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.ws/c">best free web site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader6 mbr-parallax-background mbr-after-navbar" id="extHeader6-8" data-rv-view="220" style="background-image: url(assets/images/mbr-1-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(239, 239, 239);">
 
@@ -72,7 +72,7 @@
                             <h3 class="mbr-section-title display-2 text-center blackColor"><br><br>Preventing ED&nbsp;</h3>
 
                             <div class="mbr-section-text lead text-center blackColor">
-                                <p>Did you know that that a&nbsp;prostatic massage can help prevent erectile dysfunction?<br>Studies have found that men who get a regluar prostate massage for the symptoms of ED experience improvement.&nbsp;<br></p>
+                                <p>Did you know that that a full body massage including prostatic massage can help prevent erectile dysfunction?<br>Studies have found that men who get a regluar full body masage and prostate massage for erectile dysfunction experienced improvement.&nbsp;<br><br></p>
                             </div>
 
                             <div class="container dualBtn">
